gitops/config/vaultwarden/manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: vaultwarden
  namespace: apps
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: vaultwarden-tls
      hosts:
        - vaultwarden.NIP_IO_PLACEHOLDER
        - pass.nieri0x73.com
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - vaultwarden.NIP_IO_PLACEHOLDER
        - pass.nieri0x73.com
